force-app/main/default/objects/LLC_BI__Spread_Projections_Template__c/fields/LLC_BI__Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Description__c</fullName>
    <description>The system automatically populates this optional picklist field based on the template’s created route indicating the template’s use. If the picklist is undefined, the system recognizes the value as Projection. By default, the field value is Projection.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>