force-app/main/default/objects/LLC_BI__Spread_Projections_Template__c/fields/LLC_BI__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Administrators populate this required checkbox field to define if projection templates are suitable for use. Active templates display in the Projections subroute in the Spreads Configuration route in nCino Administration. By default, it is set to true.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>