force-app/main/default/objects/LLC_BI__Spread_Projections_Template__c/fields/LLC_BI__Purpose__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Purpose__c</fullName>
    <description>The system automatically populates this optional picklist field based on the template’s created route that indicates the template’s use. By default, the field value is Projection.</description>
    <inlineHelpText>The system automatically populates this optional picklist field based on the template’s created route that indicates the template’s use. By default, the field value is Projection.</inlineHelpText>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Projection</fullName>
                <default>true</default>
                <label>Projection</label>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>